--- a/eventbot.html
+++ b/eventbot.html
@@ -2,6 +2,7 @@
 <head>
 	<title>EventBot!</title>
 	<link rel="stylesheet" type="text/css" href="eventbot.css">
+	<script src="server.js" type"text/javascript"></script>
 	<link href="https://fonts.googleapis.com/css?family=Amatic+SC:700" rel="stylesheet">
 </head>
 
