node: use lowercase paths

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     </script>
 </head>
 <body>
-    <form id="frmUploader" enctype="multipart/form-data" action="api/Upload/" method="post">
+    <form id="frmUploader" enctype="multipart/form-data" action="api/upload/" method="post">
         <input type="file" name="imgUploader" multiple />
-        <input type="submit" name="submit" id="btnSubmit" value="Upload" />
+        <input type="submit" name="submit" id="btnSubmit" value="upload" />
     </form>
 </body>
 </html>
