--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-﻿<!DOCTYPE html>
-
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head>
-    <meta charset="utf-8" />
-    <title>Upload images to server using Node JS</title>
+	<title>EventBot!</title>
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="eventbot.css">
+	<link href="https://fonts.googleapis.com/css?family=Amatic+SC:700|Saira+Semi+Condensed" rel="stylesheet">
     <script src="Scripts/jquery-3.1.1.min.js"></script>
     <script src="Scripts/jquery.form.min.js"></script>
     <script>
@@ -34,9 +34,62 @@
     </script>
 </head>
 <body>
+<h1 class="col-lg-12">Caro and Chris' Wedding Photos</h1>
+<form class="form-inline" id="frmUploader" enctype="multipart/form-data" action="api/upload/" method="post">
+  	<div class="container-fluid">
+	 	<div class="row-fluid">
+	 		<div class="col-lg-12">
+	 			<div class="content">
+	 				
+	 				<h3>Upload your photos here and share with the group!</h3>
+	 				
     <form id="frmUploader" enctype="multipart/form-data" action="api/upload/" method="post">
-        <input type="file" name="imgUploader" multiple />
-        <input type="submit" name="submit" id="btnSubmit" value="upload" />
+        <label class="sr-only" for="inlineFormInput">Your Name</label>
+	<input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="inlineFormInput" placeholder="Your Name">
+	<label class="btn btn-primary">Browse&hellip;
+            <input type="file" style="display: none;" name="imgUploader" multiple />
+	</label>
+	<button type="submit" class="btn btn-primary" name="submit" id="btnSubmit" value="Upload">Upload</button>
     </form>
+
+ 				</div>
+	 		</div>
+	 	</div>
+	 </div>
+</form>	
+<!-- Massimo Margagnoni -->
+
+<div class="containergallery">
+<div class="row">
+	<div class="col-xs-12 col-lg-4"><img src="http://c1.staticflickr.com/9/8450/8026519634_f33f3724ea_b.jpg" class="img-thumbnail"></div>
+  	<div class="col-xs-12 col-lg-4"><img src="http://c1.staticflickr.com/9/8450/8026519634_f33f3724ea_b.jpg" class="img-thumbnail"></div>
+  	<div class="col-xs-12 col-lg-4"><img src="http://c1.staticflickr.com/9/8450/8026519634_f33f3724ea_b.jpg" class="img-thumbnail"></div>
+</div>
+</div>
+
+
+<!--div class="container-fluid">
+	 	<div class="row-fluid">
+	 		<div>
+<img src="http://c1.staticflickr.com/9/8450/8026519634_f33f3724ea_b.jpg" class="img-thumbnail" class="img-fluid" alt="Responsive image">
+<img src="http://c1.staticflickr.com/9/8450/8026519634_f33f3724ea_b.jpg" class="img-thumbnail" class="img-fluid" alt="Responsive image">
+<img src="http://c1.staticflickr.com/9/8450/8026519634_f33f3724ea_b.jpg" class="img-thumbnail" class="img-fluid" alt="Responsive image">
+<img src="http://c1.staticflickr.com/9/8450/8026519634_f33f3724ea_b.jpg" class="img-thumbnail" class="img-fluid" alt="Responsive image">
+<img src="http://c1.staticflickr.com/9/8450/8026519634_f33f3724ea_b.jpg" class="img-thumbnail" class="img-fluid" alt="Responsive image">
+<img src="http://c1.staticflickr.com/9/8450/8026519634_f33f3724ea_b.jpg" class="img-thumbnail" class="img-fluid" alt="Responsive image">
+<img src="http://c1.staticflickr.com/9/8450/8026519634_f33f3724ea_b.jpg" class="img-thumbnail" class="img-fluid" alt="Responsive image">
+<img src="http://c1.staticflickr.com/9/8450/8026519634_f33f3724ea_b.jpg" class="img-thumbnail" class="img-fluid" alt="Responsive image">
+<img src="http://c1.staticflickr.com/9/8450/8026519634_f33f3724ea_b.jpg" class="img-thumbnail" class="img-fluid" alt="Responsive image">
+
+
+			</div>
+		</div>
+</div-->
+
+
+ <script src="Scripts/jquery-3.1.1.min.js"></script> 
+ <script src="Scripts/jquery.form.min.js"></script>
 </body>
 </html>
+
+
