--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <!-- saved from url=(0022)http://localhost:8090/ -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="en">
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>EventBot!</title>
 	<link rel="stylesheet" type="text/css" href="./files/eventbot.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
