html: provide alt text with the file name

--- a/static/index.html
+++ b/static/index.html
@@ -37,39 +37,39 @@
 		<div class="row">
 			
 			<div class="col-sm-12 col-lg-4">
-				<img src="./files/1.jpg" class="img-thumbnail thumbnail" data-orientation="6">
+				<img src="./files/1.jpg" alt="1.jpg" class="img-thumbnail thumbnail" data-orientation="6">
 			</div>
 			
 			<div class="col-sm-12 col-lg-4">
-				<img src="./files/2.jpg" class="img-thumbnail thumbnail" data-orientation="1">
+				<img src="./files/2.jpg" alt="2.jpg" class="img-thumbnail thumbnail" data-orientation="1">
 			</div>
 			
 			<div class="col-sm-12 col-lg-4">
-				<img src="./files/3.jpg" class="img-thumbnail thumbnail" data-orientation="5">
+				<img src="./files/3.jpg" alt="3.jpg" class="img-thumbnail thumbnail" data-orientation="5">
 			</div>
 			
 			<div class="col-sm-12 col-lg-4">
-				<img src="./files/4.jpg" class="img-thumbnail thumbnail" data-orientation="1">
+				<img src="./files/4.jpg" alt="4.jpg" class="img-thumbnail thumbnail" data-orientation="1">
 			</div>
 			
 			<div class="col-sm-12 col-lg-4">
-				<img src="./files/5.jpg" class="img-thumbnail thumbnail" data-orientation="5">
+				<img src="./files/5.jpg" alt="5.jpg" class="img-thumbnail thumbnail" data-orientation="5">
 			</div>
 			
 			<div class="col-sm-12 col-lg-4">
-				<img src="./files/6.jpg" class="img-thumbnail thumbnail" data-orientation="1">
+				<img src="./files/6.jpg" alt="6.jpg" class="img-thumbnail thumbnail" data-orientation="1">
 			</div>
 			
 			<div class="col-sm-12 col-lg-4">
-				<img src="./files/7.jpg" class="img-thumbnail thumbnail" data-orientation="3">
+				<img src="./files/7.jpg" alt="7.jpg" class="img-thumbnail thumbnail" data-orientation="3">
 			</div>
 			
 			<div class="col-sm-12 col-lg-4">
-				<img src="./files/8.jpg" class="img-thumbnail thumbnail" data-orientation="1">
+				<img src="./files/8.jpg" alt="8.jpg" class="img-thumbnail thumbnail" data-orientation="1">
 			</div>
 			
 			<div class="col-sm-12 col-lg-4">
-				<img src="./files/9.jpg" class="img-thumbnail thumbnail" data-orientation="3">
+				<img src="./files/9.jpg" alt="9.jpg" class="img-thumbnail thumbnail" data-orientation="3">
 			</div>
 			
 
