--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>EventBot!</title>
 	<link rel="stylesheet" type="text/css" href="./files/eventbot.css">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
